      etc.)
    * Removed the add button in the context toolbar. Applet explorer is opened on config.
    * Easier to understand Dynamic playlists
    * Made Amarok depend ffmpeg-0.6 or newer.
    * Use KImageCache if possible (kdelibs 4.5.0 and later), which should
      reduce the number of cache-related crashes.

  BUGFIXES:
    * Fixed cover fetching from Google Images. (BR 275265)
    * Fixed a crash in the equalizer dialog when selecting "Off".
    * Fix finalization of track copy process to media device collections. (BR238912)
      Patch by Tommaso Falchi Delitala.
    * Fixed crash on MusicBrainz search. (BR 274956)
    * Avoid crash in ContextView when accessing Plasma::Applet::view().
      (BR 258741)
    * Fixed playlist tooltip getting too tall for multiline comments. (BR 256038)
    * Made equalizer keywords (dB,kHz,...) translatable. (BR 263572)
    * Made equalizer preset names translatable. (BR 263596)
    * Fixed runtime error reporting of scripts. (BR 207409)
    * Fixed "Happy" moodbar theme. (BR 264432)
    * Fixed crash for invalid scripts trying to be stopped by the manager.
      (BR 268917)
    * Fixed collection menu items ordering. (BR 207007)
    * Fixed top level podcast location setting. (BR 263736)
    * Fixed double-clicking in collection using left-handed mouse setting.
      (BR 272360)


VERSION 2.4.1
  BUGFIXES:
    * Fixed crash on saving playlist on ineligible device. (BR 266899)
    * Fixed Photos applet crash on track metadata change. (BR 265395)
    * Fixed crash on local collection search. (BR 270949)
    * Fixed crash during iPod track removal. (BR 253088)
    * Relative paths support for XSPF playlists. (BR 264147)
    * Fixed incorrect handling of "Various Artists" node by Collection Browser,
      now selection of this node returns "Various Artists" tracks instead of
      whole collection. (BR: 263255, BR: 269717)
    * Fixed song scrobbling if It was paused. (BR 267477)