@@ -33,6 +33,7 @@ VERSION 2.4.2-Beta 1
       reduce the number of cache-related crashes.
 
   BUGFIXES:
+    * Don't let the album applet freeze Amarok for ages on track change. (BR260810, BR277021)
     * Fixed cover fetching from Google Images. (BR 275265)
     * Fixed a crash in the equalizer dialog when selecting "Off".
     * Fix finalization of track copy process to media device collections. (BR238912)
